--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "m",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
